--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 <link rel="preconnect" crossorigin href="https://admin-asset-shoppedance-com.oss-us-west-1.aliyuncs.com">
 <link rel="dns-prefetch" href="https://at.alicdn.com">
 <link rel="preconnect" crossorigin href="https://at.alicdn.com">
-<link rel="stylesheet" href="https://upload.kalowave.cn/autocreator/dist/umi.48b01d86.css">
+<link rel="stylesheet" href="https://d149xzut2sq6e3.cloudfront.net/autocreator/dist/umi.48b01d86.css">
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-TMBZKE3J80"></script>
 <script>
         window.dataLayer = window.dataLayer || [];
@@ -34,6 +34,6 @@
 </head>
 <body>
 <div id="root"></div>
-<script src="https://upload.kalowave.cn/autocreator/dist/umi.a5e09e1b.js"></script>
+<script src="https://d149xzut2sq6e3.cloudfront.net/autocreator/dist/umi.369d5273.js"></script>
 </body>
 </html>
