--- a/public/index.html
+++ b/public/index.html
@@ -1,39 +1,52 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, viewport-fit=cover">
-<meta name="mobile-web-app-capable" content="yes">
-<meta http-equiv="x-ua-compatible" content="ie=edge">
-<meta name="renderer" content="webkit">
-<meta name="layoutmode" content="standard">
-<meta name="imagemode" content="force">
-<meta name="wap-font-scale" content="no">
-<meta name="format-detection" content="telephone=no">
-<meta http-equiv="x-dns-prefetch-control" content="no">
-<link rel="shortcut icon" href="https://admin-asset-shoppedance-com.oss-us-west-1.aliyuncs.com/public/shoppedance.ico">
-<title>AutoCreator</title>
-<link rel="dns-prefetch" href="https://app.kalowave.cn">
-<link rel="preconnect" crossorigin href="https://app.kalowave.cn">
-<link rel="dns-prefetch" href="https://asset.shoppedance.com">
-<link rel="preconnect" crossorigin href="https://asset.shoppedance.com">
-<link rel="dns-prefetch" href="https://www.google-analytics.com">
-<link rel="preconnect" crossorigin href="https://www.google-analytics.com">
-<link rel="dns-prefetch" href="https://admin-asset-shoppedance-com.oss-us-west-1.aliyuncs.com">
-<link rel="preconnect" crossorigin href="https://admin-asset-shoppedance-com.oss-us-west-1.aliyuncs.com">
-<link rel="dns-prefetch" href="https://at.alicdn.com">
-<link rel="preconnect" crossorigin href="https://at.alicdn.com">
-<link rel="stylesheet" href="https://d149xzut2sq6e3.cloudfront.net/autocreator/dist/umi.48b01d86.css">
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-TMBZKE3J80"></script>
-<script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'G-TMBZKE3J80');
-      </script>
-</head>
-<body>
-<div id="root"></div>
-<script src="https://d149xzut2sq6e3.cloudfront.net/autocreator/dist/umi.369d5273.js"></script>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, viewport-fit=cover"
+    />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <meta name="renderer" content="webkit" />
+    <meta name="layoutmode" content="standard" />
+    <meta name="imagemode" content="force" />
+    <meta name="wap-font-scale" content="no" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta http-equiv="x-dns-prefetch-control" content="no" />
+    <link
+      rel="shortcut icon"
+      href="https://admin-asset-shoppedance-com.oss-us-west-1.aliyuncs.com/public/shoppedance.ico"
+    />
+    <title>AutoCreator</title>
+    <link rel="dns-prefetch" href="https://app.kaloboost.com" />
+    <link rel="preconnect" crossorigin href="https://app.kaloboost.com" />
+    <link rel="dns-prefetch" href="https://asset.shoppedance.com" />
+    <link rel="preconnect" crossorigin href="https://asset.shoppedance.com" />
+    <link rel="dns-prefetch" href="https://www.google-analytics.com" />
+    <link
+      rel="preconnect"
+      crossorigin
+      href="https://www.google-analytics.com"
+    />
+    <link
+      rel="dns-prefetch"
+      href="https://admin-asset-shoppedance-com.oss-us-west-1.aliyuncs.com"
+    />
+    <link
+      rel="preconnect"
+      crossorigin
+      href="https://admin-asset-shoppedance-com.oss-us-west-1.aliyuncs.com"
+    />
+    <link rel="dns-prefetch" href="https://at.alicdn.com" />
+    <link rel="preconnect" crossorigin href="https://at.alicdn.com" />
+    <link
+      rel="stylesheet"
+      href="https://d149xzut2sq6e3.cloudfront.net/autocreator/dist/umi.48b01d86.css"
+    />
+  </head>
+  <body>
+    <div id="root"></div>
+    <script src="https://d149xzut2sq6e3.cloudfront.net/autocreator/dist/umi.292b9046.js"></script>
+  </body>
 </html>
