--- a/login/index.html
+++ b/login/index.html
@@ -7,10 +7,10 @@
 <link rel="shortcut icon" href="https://admin-asset-shoppedance-com.oss-us-west-1.aliyuncs.com/public/shoppedance.ico">
 <title>AutoCreator</title>
 <link href="https://admin-asset-shoppedance-com.oss-us-west-1.aliyuncs.com" rel="dns-prefetch">
-<link rel="stylesheet" href="https://asset-shoppedance-com.oss-accelerate.aliyuncs.com/login/umi.2412a564.css">
+<link rel="stylesheet" href="https://d149xzut2sq6e3.cloudfront.net/autocreatorlogin/dist/umi.2412a564.css">
 </head>
 <body>
 <div id="root"></div>
-<script src="https://asset-shoppedance-com.oss-accelerate.aliyuncs.com/login/umi.d87d673b.js"></script>
+<script src="https://d149xzut2sq6e3.cloudfront.net/autocreatorlogin/dist/umi.311d30cf.js"></script>
 </body>
 </html>
